<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextV"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Textv" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radioresistencia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="valresistencia"
            android:text="@string/Resist" />

        <RadioButton
            android:id="@+id/radiovoltaje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="valvoltaje"
            android:text="@string/Volt" />

        <RadioButton
            android:id="@+id/radiointencidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="valintencidad"
            android:text="@string/Inten" />

    </RadioGroup>

    <TextView
        android:id="@+id/TextV_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Val1"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/edtexvalor1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/TextV_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Val2"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/edtexvalor2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btcalcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="operaciones"
            android:text="@string/Displa" />

        <TextView
            android:id="@+id/resul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Resul"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

</LinearLayout>